# judge-api

./: README.md  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go
cmd/: root.go
codeforces/: config.go  service.go  types.go
config/: config.go  default.yaml
ogen/: generate.go  judge-api.yaml
ogen/api/: oas_client_gen.go  oas_handlers_gen.go  oas_json_gen.go  oas_parameters_gen.go  oas_response_decoders_gen.go  oas_response_encoders_gen.go  oas_router_gen.go  oas_schemas_gen.go  oas_server_gen.go  oas_unimplemented_gen.go  oas_validators_gen.go
undetected-proxy/: main.py  pyproject.toml
